--- a/Aufgabenplaner/CMakeLists.txt
+++ b/Aufgabenplaner/CMakeLists.txt
@@ -23,6 +23,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(Aufgabenplaner
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
+        dialogtaskhinzufuegen.h dialogtaskhinzufuegen.cpp dialogtaskhinzufuegen.ui
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET Aufgabenplaner APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
