GUI abgeschlossen, Kommentare Backend noch schreiben, dann Dokumente Phase 2 erstellen

--- a/Aufgabenplaner/CMakeLists.txt
+++ b/Aufgabenplaner/CMakeLists.txt
@@ -27,6 +27,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         erledigteaufgabenliste.h erledigteaufgabenliste.cpp erledigteaufgabenliste.ui
         ../Task.cpp ../TaskManager.cpp
         ueberfaelligeaufgaben.h ueberfaelligeaufgaben.cpp ueberfaelligeaufgaben.ui
+        dialogtaskbearbeiten.h dialogtaskbearbeiten.cpp dialogtaskbearbeiten.ui
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET Aufgabenplaner APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
