Test Cases hinzugefügt
-"überfällig"-Beschreibung im MainWindow hinzugefügt
-4 Test Cases hinzugefügt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,3 +17,6 @@ target_link_libraries(AufgabenTracker Qt6::Widgets)
 add_subdirectory(googletest)
 add_executable(simple_test test_simple.cpp)
 target_link_libraries(simple_test Qt6::Core gtest gtest_main)   #Qt Widgets einbinden
+
+enable_testing()
+add_test(NAME simple_test COMMAND simple_test)
